syntax = "proto3";

package user;

service User {
  rpc GetUserById(UserById) returns (UserResult) {}
  rpc CreateUser(UserInput) returns (UserResult) {}
}

message UserById {
  string id = 1;
}

message UserResult {
  string id = 1;
  string name = 2;
}

message UserInput {
  string id = 1;
  string name = 2;
}


